--- a/WheelsWorld/Views/Shared/_DefaultPage.cshtml
+++ b/WheelsWorld/Views/Shared/_DefaultPage.cshtml
@@ -82,7 +82,7 @@
                                 <div class="widget-content-left">
                                     <div class="btn-group">
                                         <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                                            <img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">
+                                            <img width="42" class="rounded-circle" src="../../Content/assets/images/avatars/1.jpg" alt="">
                                             <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                         </a>
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
@@ -402,7 +402,8 @@
                     </div>
                 </div>
             </div>
-        </div>        <div class="app-main">
+        </div>
+        <div class="app-main">
             <div class="app-sidebar sidebar-shadow">
                 <div class="app-header__logo">
                     <div class="logo-src"></div>
@@ -438,9 +439,15 @@
                         <ul class="vertical-nav-menu">
                             <li class="app-sidebar__heading">Dashboards</li>
                             <li>
-                                <a href="index.html" class="mm-active">
+                                <a href="@Url.Action("Dashboard", "Main")" class="mm-active">
                                     <i class="metismenu-icon pe-7s-rocket"></i>
-                                    Dashboard Example 1
+                                    Dashboard
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("NewAnnounce", "Main")">
+                                    <i class="metismenu-icon pe-7s-magic-wand icon-gradient bg-mixed-hopes"></i>
+                                    Create Announce
                                 </a>
                             </li>
                             <li class="app-sidebar__heading">UI Components</li>
@@ -619,15 +626,14 @@
                     </div>
                 </div>
             </div>
-            <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+            <div class="app-main__outer">
+                <div class="app-main__inner">
+                    @RenderBody()
+                </div>
+            </div>
         </div>
     </div>
-    <div class="app-main__outer">
-        <div class="app-main__inner">
-            @RenderBody()
-        </div>
-    </div>
-
-        @Scripts.Render("~/bundles/main")
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    @Scripts.Render("~/bundles/main")
 </body>
 </html>
